--- a/eduprod/templates/eduprod/layout.html
+++ b/eduprod/templates/eduprod/layout.html
@@ -4,7 +4,7 @@
 <head>
     <title>Q&A</title>
     <link href="{% static 'users/styles.css' %}" rel="stylesheet">
-    <script src="{% static 'eduprod/quiz.js' %}" defer></script>
+    <script src="{% static 'celltypes/quiz.js' %}" defer></script>
 </head>
 <body>
     <div class="header">
