--- a/celltypes/templates/celltypes/index.html
+++ b/celltypes/templates/celltypes/index.html
@@ -1,4 +1,4 @@
-{% extends "eduprod/layout.html" %}
+{% extends "celltypes/layout.html" %}
 {% block body %}
 <div id="content" data-questions='{{ questions_json|safe }}'></div>
 <button id="revealBtn">Reveal Answer</button> 
