--- a/cellorganelles/templates/cellorganelles/index.html
+++ b/cellorganelles/templates/cellorganelles/index.html
@@ -1,4 +1,4 @@
-{% extends "eduprod/layout.html" %}
+{% extends "cellorganelles/layout.html" %}
 {% block body %}
 <div id="content" data-questions='{{ questions_json|safe }}'></div>
 <button id="revealBtn">Reveal Answer</button> 
