--- a/cellorganelles/templates/cellorganelles/index.html
+++ b/cellorganelles/templates/cellorganelles/index.html
@@ -1,5 +1,7 @@
 {% extends "cellorganelles/layout.html" %}
 {% block body %}
-<div id="content" data-questions='{{ questions_json|safe }}'></div>
-<button id="revealBtn">Reveal Answer</button> 
+    <!-- Container for the content with data-questions attribute -->
+    <div id="content" data-questions='{{ questions_json|safe }}'></div>
+    <!-- Button to reveal answers -->
+    <button id="revealBtn">Reveal Answer</button> 
 {% endblock %}
