--- a/users/templates/users/layout.html
+++ b/users/templates/users/layout.html
@@ -6,18 +6,25 @@
     <link href="{% static 'users/styles.css' %}" rel="stylesheet">
 </head>
 <body>
+    <!-- Header section -->
     <div class="header">
+        <!-- Logo section -->
         <div class="logo">
             <img src="{% static 'users/logo.gif' %}" alt="Logo">
         </div>
+        <!-- User information -->
         <div class="user-info">
+            <!-- Display username -->
             <span>{{ user.username }}</span>
+            <!-- Logout form -->
             <form action="{% url 'users:logout' %}" method="post" style="margin: 0; margin-left: 20px;">
                 {% csrf_token %}
+                <!-- Logout button -->
                 <button type="submit">Log out</button>
             </form>
         </div>
     </div>   
+     <!-- Display messages -->
     {% if messages %}
         <ul class="messages">
         {% for message in messages %}
@@ -25,6 +32,7 @@
         {% endfor %}
         </ul>
     {% endif %}
+    <!-- Block for body content -->
     {% block body %}
     {% endblock %}
 </body>
