--- a/users/templates/users/user.html
+++ b/users/templates/users/user.html
@@ -1,6 +1,7 @@
 {% extends "users/layout.html" %}
 {% block body %}
-    <h1>Welcome, {{ request.user.username }}</h1>
+    <h1>Welcome, {{ request.user.username }}</h1> <!-- Display a welcome message with the username of the logged-in user -->
+    <!-- Links to different sections of the website -->
     <p><a href="{% url 'celltypes:index' %}">Prokaryotes and Eukaryotes</a></p>
     <p><a href="{% url 'cellorganelles:index' %}">Cell Organelles</a></p>
     <p><a href="{% url 'eduprod:index' %}">Enzymes</a></p>
